{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 51,
  "lineage": "006ee031-a72e-145a-ed80-0f5e4e65592e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "contingency_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraformservicios/zones/us-central1-a/instanceGroups/grupo-contingencia",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-06-26T15:06:40.868-07:00",
            "enable_cdn": false,
            "fingerprint": "pb0no_UqiVM=",
            "generated_id": 6911522402943060255,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/healthChecks/health-check-http"
            ],
            "id": "projects/terraformservicios/global/backendServices/backend-contingencia",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "backend-contingencia",
            "port_name": "http",
            "project": "terraformservicios",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/backendServices/backend-contingencia",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.http_hc",
            "google_compute_instance.contingency",
            "google_compute_instance_group.contingency_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "primary_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/terraformservicios/zones/us-central1-a/instanceGroups/grupo-principal",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-06-26T15:06:41.500-07:00",
            "enable_cdn": false,
            "fingerprint": "A-qL4AnyKOo=",
            "generated_id": 2002869946099648798,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/healthChecks/health-check-http"
            ],
            "id": "projects/terraformservicios/global/backendServices/backend-principal",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "backend-principal",
            "port_name": "http",
            "project": "terraformservicios",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/backendServices/backend-principal",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.http_hc",
            "google_compute_instance.primary",
            "google_compute_instance_group.primary_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-26T14:36:53.024-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformservicios/global/firewalls/allow-lb-health-check",
            "log_config": [],
            "name": "allow-lb-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/networks/proyecto-vpc",
            "priority": 1000,
            "project": "terraformservicios",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/firewalls/allow-lb-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-26T14:36:52.783-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformservicios/global/firewalls/allow-http-web",
            "log_config": [],
            "name": "allow-http-web",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/networks/proyecto-vpc",
            "priority": 1000,
            "project": "terraformservicios",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/firewalls/allow-http-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/terraformservicios/global/forwardingRules/regla-reenvio-http",
            "ip_address": "136.68.178.232",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "regla-reenvio-http",
            "port_range": "80-80",
            "project": "terraformservicios",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/forwardingRules/regla-reenvio-http",
            "target": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/targetHttpProxies/proxy-http"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.contingency_backend",
            "google_compute_backend_service.primary_backend",
            "google_compute_health_check.http_hc",
            "google_compute_instance.contingency",
            "google_compute_instance.primary",
            "google_compute_instance_group.contingency_group",
            "google_compute_instance_group.primary_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "contingency",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260609",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraformservicios/zones/us-central1-a/disks/vm-servicio-contingencia"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraformservicios/zones/us-central1-a/instances/vm-servicio-contingencia",
            "instance_id": "4497989501168339256",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "nUPlwvN0R_0=",
            "metadata_startup_script": "#!/bin/bash\napt-get update -y\napt-get install -y nginx\nsystemctl enable nginx\nsystemctl start nginx\npython3 -c \"open('/var/www/html/index.html','w').write('\u003chtml\u003e\u003cbody style=background:#fce4ec\u003e\u003cdiv style=margin:auto;margin-top:20%;text-align:center\u003e\u003ch1\u003eError 503 - Sitio en Mantenimiento Programado\u003c/h1\u003e\u003c/div\u003e\u003c/body\u003e\u003c/html\u003e')\"\nsystemctl restart nginx",
            "name": "vm-servicio-contingencia",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/networks/proyecto-vpc",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraformservicios/regions/us-central1/subnetworks/proyecto-subnet",
                "subnetwork_project": "terraformservicios"
              }
            ],
            "project": "terraformservicios",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/zones/us-central1-a/instances/vm-servicio-contingencia",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web-server"
            ],
            "tags_fingerprint": "Fcv0aJ--8z8=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260609",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraformservicios/zones/us-central1-a/disks/vm-servicio-principal"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraformservicios/zones/us-central1-a/instances/vm-servicio-principal",
            "instance_id": "547092146920048952",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "NMEELyxV6iI=",
            "metadata_startup_script": "#!/bin/bash\napt-get update -y\napt-get install -y nginx\nsystemctl enable nginx\nsystemctl start nginx\npython3 -c \"open('/var/www/html/index.html','w').write('\u003chtml\u003e\u003cbody style=background:#e8f5e9\u003e\u003cdiv style=margin:auto;margin-top:20%;text-align:center\u003e\u003ch1\u003eBienvenido al Servicio Principal - Version Produccion\u003c/h1\u003e\u003c/div\u003e\u003c/body\u003e\u003c/html\u003e')\"\nsystemctl restart nginx",
            "name": "vm-servicio-principal",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/networks/proyecto-vpc",
                "network_ip": "10.0.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraformservicios/regions/us-central1/subnetworks/proyecto-subnet",
                "subnetwork_project": "terraformservicios"
              }
            ],
            "project": "terraformservicios",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/zones/us-central1-a/instances/vm-servicio-principal",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web-server"
            ],
            "tags_fingerprint": "Fcv0aJ--8z8=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraformservicios/global/networks/proyecto-vpc",
            "mtu": 0,
            "name": "proyecto-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7864780408491298353",
            "project": "terraformservicios",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/networks/proyecto-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-26T15:15:19.544-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terraformservicios/regions/us-central1/routers/proyecto-router",
            "name": "proyecto-router",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/networks/proyecto-vpc",
            "project": "terraformservicios",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/regions/us-central1/routers/proyecto-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "terraformservicios/us-central1/proyecto-router/proyecto-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "proyecto-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terraformservicios",
            "region": "us-central1",
            "router": "proyecto-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-26T14:36:53.458-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/terraformservicios/regions/us-central1/subnetworks/proyecto-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "proyecto-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/networks/proyecto-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformservicios",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/regions/us-central1/subnetworks/proyecto-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-26T15:10:21.434-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/terraformservicios/global/targetHttpProxies/proxy-http",
            "name": "proxy-http",
            "project": "terraformservicios",
            "proxy_bind": false,
            "proxy_id": 1712286851287696930,
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/targetHttpProxies/proxy-http",
            "url_map": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/urlMaps/mapa-trafico-url"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.contingency_backend",
            "google_compute_backend_service.primary_backend",
            "google_compute_health_check.http_hc",
            "google_compute_instance.contingency",
            "google_compute_instance.primary",
            "google_compute_instance_group.contingency_group",
            "google_compute_instance_group.primary_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-26T15:10:09.280-07:00",
            "default_route_action": [
              {
                "cors_policy": [],
                "fault_injection_policy": [],
                "request_mirror_policy": [],
                "retry_policy": [],
                "timeout": [],
                "url_rewrite": [],
                "weighted_backend_services": [
                  {
                    "backend_service": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/backendServices/backend-principal",
                    "header_action": [],
                    "weight": 50
                  },
                  {
                    "backend_service": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/backendServices/backend-contingencia",
                    "header_action": [],
                    "weight": 50
                  }
                ]
              }
            ],
            "default_service": "",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "-2DDUDJfZjc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/terraformservicios/global/urlMaps/mapa-trafico-url",
            "map_id": 4724864126308009519,
            "name": "mapa-trafico-url",
            "path_matcher": [],
            "project": "terraformservicios",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformservicios/global/urlMaps/mapa-trafico-url",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.contingency_backend",
            "google_compute_backend_service.primary_backend",
            "google_compute_health_check.http_hc",
            "google_compute_instance.contingency",
            "google_compute_instance.primary",
            "google_compute_instance_group.contingency_group",
            "google_compute_instance_group.primary_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}